--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.2.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "uuid": "^13.0.0"
